# HistogramEqualization16Bit

./: CMakeLists.txt  README.md
Histogram/: Histogram.cpp  Histogram.h
Histogram-Test/: CMakeLists.txt  Histogram-Test.cpp
HistogramEqualization/: CMakeLists.txt  HistogramEqualization.cpp  HistogramEqualization.h
